syntax = "proto3"; // Definition
package ie.gmit.part_two;
import "google/protobuf/wrappers.proto";


option java_multiple_files = true;
option java_package = "ie.gmit.part_two";

// Service Definition
service PasswordService {
   // Hash sent via param and awaits server response
   rpc hash(HashRequest) returns (HashResponse);
   rpc validate(ValidateRequest) returns (google.protobuf.BoolValue);
}

// HashRequest 
message HashRequest {
   int32 userId = 1;
   string password = 2;
}

// HashResponse
message HashResponse{
	int32 userId = 1;
	// String hashedpassword = 2;
	bytes hashedPassword = 2;
	bytes salt = 3;
}

// ValidatorRequest
message ValidateRequest {
    string password = 1;
    // String hashedPassword = 2;
    bytes hashedPassword = 2;
    bytes salt = 3;
}